--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ω",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf build && BROCCOLI_COMPRESS=true broccoli build build",
     "serve": "BROCCOLI_SERVE=true broccoli serve"
   },
@@ -25,6 +25,7 @@
     "broccoli-jade": "^1.0.1",
     "broccoli-merge-trees": "^0.2.3",
     "broccoli-stylus-single": "^0.4.1",
+    "broccoli-watched-tree": "0.1.2",
     "uglifyify": "^3.0.1"
   }
 }
